	  columns (not just the first-matching ones)
	- add skip_untagged parameter to without_columns and ColumnFilter,
	  for removing columns without HXL hashtags
	- hxl.model.Row.get_all can take a default value
	- the clean-data filter has a number_format option (e.g. "0.2f")
	- hxl.model.Column.display_tag always shows attributes sorted, per HXL
	  1.1 beta
	- hxl.model.Source.gen_json() has a new use_objects option to use
	  the JSON list-of-objects format from HXL 1.1 beta as output
	- hxl.io.write_json() has the use_objects option to pass on to
	  hxl.model.Source.gen_json()

2017-11-22 Release 4.4
	- throw proper exception for failed HTTP request from requests library
	- support JSON arrays of objects as well as arrays of arrays
	- recursively search for HXL data inside a JSON dataset

2017-06-13 Release 4.3
	- fixed bug with disabling SSL checks via requests library
	- improved Excel data handling — use integers instead of floats
	  when possible, and fix bug when trying to parse numbers as dates

2017-06-05 Release 4.1
	- support JSON input (list of rows)
	- add fill_data filter to fill empty cells from previous rows
	- use MIME type and extension where available to help choose type
	- grab character encoding from HTTP response if available
	- add verify_ssl parameter to hxl.io.data, hxl.io.make_input,
  	  etc. Defaults to True; if False, don't try to validate SSL certs
	- add new "is (not)" operator for row queries
	- add optional date_format parameter for clean data filter
	- fix bug with error messages from scripts
	- fix output bug in command-line scripts
	- fix bug in merge filter
	- fix bug in hxl.io.tagger

2016-12-02 Release 4.0
	- Fully modularised JSON specs and recipes.
	- Made JSON specs and recipes work recursively.
	- Fix bug that caused select filter to fail after explode filter
	- Added top-level hxl.tagger() function, similar to hxl.data()
	- add optional default_header arg to hxl.model.Column.parse_spec